[package]
name = "alphabeth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
reqwest = "0.11.20"
select = "0.6.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
soup = "0.5.1"
thirtyfour = "0.31.0"
tokio = "1.32.0"
